@@ -1,5 +1,8 @@
 # $Id$
 
+2005-12-14
+	* Fixed issues with execi stuff
+
 2005-12-10
 	* Added sf.net patch 1374576
 
